<resources>
    <string name="app_name">Golden Quran</string>
    <string name="playerCurrentSura">Current Sura</string>
    <string name="playerSuraName">ALmutafefeen</string>
    <string name="AyatSelection">Select Ayat</string>
    <string name="onFinish">On Finish</string>
    <string name="playNext">Play next Sura</string>
    <string name="stopSuraPlaying">Stpo Sura</string>
    <string name="repeatTheAyat">Repeat the selected Ayat</string>
    <string name="readingOptions">Reading options</string>
    <string name="moveToTheNextSura">Move Automaticly to the next page and marck the next verses</string>
    <string name="startTheBAsmalah">Play basmalah on start of sura</string>
    <string name="repeatAyat">Continuous voice between verses</string>
    <string name="pickTheShake">Choose the reader and download audio files</string>
    <string name="changeTheShake">Change reader</string>
    <string name="downloadedSura">download Sura</string>
    <string name="flag1">To use no explanation must be provided in contact with the Internet.</string>
    <string name="flag2">Or upload it to be used without an Internet connection.</string>
    <string name="downloadSuraForShake">Download fence reciter Mashary</string>
    <string name="downloadAll">Download All</string>
    <string name="athkarFromQuran">Citation from the Koran</string>
    <string name="nightReading">Night reading</string>
    <string name="fridayReading">Friday reading</string>
    <string name="ramadan_21_1437_ah">Ramadan 21, 1437 AH</string>
    <string name="dateMWithTime">2016 Jun 26 10:51 AM</string>
    <string name="alFateha">Al-fateha</string>
    <string name="numberOfSura">number</string>
    <string name="numberOfAyat">ayat</string>
    <string name="ListOfSuar">List Of Suar</string>
    <string name="suraName">al Fateha</string>
    <string name="downloadSura">1.Al Fateha</string>
    <string name="bookmarkNumber">aya number 21</string>
    <string name="bookmarckName">sura baqara</string>
    <string name="tafseerName">Al Tafseer Muyasser</string>
    <string name="tafseerDescription">Al Qurtopy</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="start_download">Start Download</string>
    <string name="szdDownload">download</string>
    <string name="zsdDonloaded">File Download Complete</string>
    <string name="mojam">Mojam</string>
    <string name="ayaSubject">Aya Subject</string>
    <string name="quranAyat">Quran Ayat</string>
    <string name="search">Search</string>
    <string name="fahras">Fahras</string>
    <string name="bookmarksTitle">Bookmarks</string>
    <string name="playerSettings">player Settings</string>
    <string name="fridayNotificationTitle">Notification Fryday</string>
    <string name="frydayNotificationDescription">Alert shows on Friday to remind the Cave to read</string>
    <string name="threeDaysNotificationTitle">Attention has not read the Koran for some time</string>
    <string name="threeDAyNotificationDescription">Alert appear if cut off from reading the Koran more than three days</string>
    <string name="dailyNotification">Notices daily</string>
    <string name="dailyNotificationDescription">Daily Tenbbhet virtues and religious sayings</string>
    <string name="NotificationTitle">Notification</string>
    <string name="onFinishQuranTitle">On Finish Quran</string>
    <string name="pickBackCover">Page background colo</string>
    <string name="textSize">Font size</string>
    <string name="pickShake">Select Reader</string>
    <string name="downladSura">Download suras</string>
    <string name="pickTafseer">Select Explanation</string>
    <string name="notificationManaging">Application Alerts management</string>
    <string name="downladedSuraManaging">Suras loaded management</string>
    <string name="ContactUs">Contact us</string>
    <string name="pickLanguage">Select Application language</string>
    <string name="Arabic">Arabic</string>
    <string name="english">English</string>
    <string name="Translate">Translate</string>
    <string name="page_of_quran_landscape">Preferred quran page on landScape</string>
    <string name="one_page_at_a_time">One side with colored background image</string>
    <string name="two_page_at_a_time">Double sides with colors only</string>
    <string name="mos7af_type">mos7af Type : </string>
    <string name="mos7af_name">mos7af Name :</string>
    <string name="pleaseWait">Loading. Please wait…</string>
    <string name="title_activity_player_for_result">PlayerActivityForResult</string>
    <string name="imagesTitle">Quran Images</string>
    <string name="no_bookmark">there is no bookmarks</string>
    <string name="surah">Surah </string>
    <string name="pageNumber">Page</string>
    <string name="downladAll">Download All</string>
    <string-array name="translateTabs">
        <item name="atafseer">Al Tafseer</item>
        <item name="reasonsOfNosol">Reasons of nuzul</item>
        <item name="wordMeanings">Word Meaning</item>
        <item name="dictionari">Dictunari</item>
        <item name="alErab">Al erab</item>
        <item name="albalagha">Al balagha</item>
        <item name="alsarf">Al sarf</item>
        <item name="ayatTopic">Ayat Topic</item>
        <item name="translate">Translate</item>
    </string-array>
    <string-array name="searchTabs">
        <item name="mojam">Mojam</item>
        <item name="ayaSubject">Aya Subject</item>
        <item name="quranAyat">Quran Ayat</item>
    </string-array>
    <string-array name="titles">
        <item>by sura</item>
        <item>by Juza</item>
    </string-array>
    <string-array name="MainList">
        <item>Quran Athkar</item>
        <item>Night Reading</item>
        <item>Friday Reading</item>
        <item>Bookmarks</item>
        <item>Suras List</item>
        <item>Highlight verses by topics</item>
        <item>Search</item>
        <item>Audio player</item>
        <item>Prayer Time</item>
        <item>Finishing Quran Doaa</item>
        <item>Forty Nowawya</item>
        <item>Share current page</item>
        <item>Settings</item>
    </string-array>
    <string-array name="fahrasSuras">
        <item>Al-Fatihah</item>
        <item>Al-Baqarah</item>
        <item>Ali \`Imran</item>
        <item>An-Nisa\'</item>
        <item>Al-Ma\'idah</item>
        <item>Al-\'An\`am</item>
        <item>Al-\'A\`raf</item>
        <item>Al-\'Anfal</item>
        <item>Tawbah</item>
        <item>Yunus</item>
        <item>Hud</item>
        <item>Yusuf</item>
        <item>Ar-Ra\`d</item>
        <item>\'Ibrahim</item>
        <item>Al-Hijr</item>
        <item>An-Nahl</item>
        <item>Al-\'Isra\'</item>
        <item>Al-Kahf</item>
        <item>Maryam</item>
        <item>Taha</item>
        <item>Al-\'Anbya\'</item>
        <item>Al-Haj</item>
        <item>Al-Mu\'minun</item>
        <item>An-Nur</item>
        <item>Al-Furqan</item>
        <item>Ash-Shu\`ara\'</item>
        <item>An-Naml</item>
        <item>Al-Qasas</item>
        <item>Al-\`Ankabut</item>
        <item>Ar-Rum</item>
        <item>Luqman</item>
        <item>As-Sajdah</item>
        <item>Al-\'Ahzab</item>
        <item>Saba\'</item>
        <item>Fatir</item>
        <item>Ya-Sin</item>
        <item>As-Saffat</item>
        <item>Sad</item>
        <item>Az-Zumar</item>
        <item>Ghafir</item>
        <item>Fussilat</item>
        <item>Ash-Shuraa</item>
        <item>Az-Zukhruf</item>
        <item>Ad-Dukhan</item>
        <item>Al-Jathiyah</item>
        <item>Al-\'Ahqaf</item>
        <item>Muhammad</item>
        <item>Al-Fath</item>
        <item>Al-Hujurat</item>
        <item>Qaf</item>
        <item>Adh-Dhariyat</item>
        <item>At-Tur</item>
        <item>An-Najm</item>
        <item>Al-Qamar</item>
        <item>Ar-Rahman</item>
        <item>Al-Waqi\`ah</item>
        <item>Al-Hadid</item>
        <item>Al-Mujadila</item>
        <item>Al-Hashr</item>
        <item>Al-Mumtahanah</item>
        <item>As-Saf</item>
        <item>Al-Jumu\`ah</item>
        <item>Al-Munafiqun</item>
        <item>At-Taghabun</item>
        <item>At-Talaq</item>
        <item>At-Tahrim</item>
        <item>Al-Mulk</item>
        <item>Al-Qalam</item>
        <item>Al-Haqqah</item>
        <item>Al-Ma\`arij</item>
        <item>Nuh</item>
        <item>Al-Jinn</item>
        <item>Al-Muzzammil</item>
        <item>Al-Muddaththir</item>
        <item>Al-Qiyamah</item>
        <item>Al-\'Insan</item>
        <item>Al-Mursalat</item>
        <item>An-Naba\'</item>
        <item>An-Nazi\`at</item>
        <item>\`Abasa</item>
        <item>At-Takwir</item>
        <item>Al-\'Infitar</item>
        <item>Al-Mutaffifin</item>
        <item>Al-\'Inshiqaq</item>
        <item>Al-Buruj</item>
        <item>At-Tariq</item>
        <item>Al-\'A\`la</item>
        <item>Al-Ghashiyah</item>
        <item>Al-Fajr</item>
        <item>Al-Balad</item>
        <item>Ash-Shams</item>
        <item>Al-Layl</item>
        <item>Ad-Duhaa</item>
        <item>Ash-Sharh</item>
        <item>At-Tin</item>
        <item>Al-\`Alaq</item>
        <item>Al-Qadr</item>
        <item>Al-Bayyinah</item>
        <item>Az-Zalzalah</item>
        <item>Al-\`Adiyat</item>
        <item>Al-Qari\`ah</item>
        <item>At-Takathur</item>
        <item>Al-\`Asr</item>
        <item>Al-Humazah</item>
        <item>Al-Fil</item>
        <item>Quraysh</item>
        <item>Al-Ma\`un</item>
        <item>Al-Kawthar</item>
        <item>Al-Kafirun</item>
        <item>An-Nasr</item>
        <item>Al-Masad</item>
        <item>Al-\'Ikhlas</item>
        <item>Al-Falaq</item>
        <item>An-Nas</item>

    </string-array>
    <string-array name="fahrasAjzaa">

        <item>Juz’ 1</item>
        <item>Juz’ 2</item>
        <item>Juz’ 3</item>
        <item>Juz’ 4</item>
        <item>Juz’ 5</item>
        <item>Juz’ 6</item>
        <item>Juz’ 7</item>
        <item>Juz’ 8</item>
        <item>Juz’ 9</item>
        <item>Juz’ 10</item>
        <item>Juz’ 11</item>
        <item>Juz’ 12</item>
        <item>Juz’ 13</item>
        <item>Juz’ 14</item>
        <item>Juz’ 15</item>
        <item>Juz’ 16</item>
        <item>Juz’ 17</item>
        <item>Juz’ 18</item>
        <item>Juz’ 19</item>
        <item>Juz’ 20</item>
        <item>Juz’ 21</item>
        <item>Juz’ 22</item>
        <item>Juz’ 23</item>
        <item>Juz’ 24</item>
        <item>Juz’ 25</item>
        <item>Juz’ 26</item>
        <item>Juz’ 27</item>
        <item>Juz’ 28</item>
        <item>Juz’ 29</item>
        <item>Juz’ 30</item>

    </string-array>
</resources>