<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:paddingBottom="1dp">

    <ImageView
        android:id="@+id/imageLiftArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/right_arrow" />

    <TextView
        android:id="@+id/suraName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/contentPanel"
        android:layout_toLeftOf="@+id/imageLiftArrow"
        android:layout_toRightOf="@+id/contentPanel"
        android:layout_toStartOf="@+id/imageLiftArrow"
        android:text="@string/alFateha"
        android:textAlignment="textStart"
        android:gravity="start"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/contentPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="#ECEFF1">

        <LinearLayout
            android:id="@+id/numberOfSuraLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="#ECEFF1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/numberOfSura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textColor="#F4A460"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/raqmha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numberOfSura"
                android:textColor="#F4A460"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ayatLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="#ECEFF1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/numberOfAyat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7"
                android:textColor="#F4A460" />

            <TextView
                android:id="@+id/ayat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numberOfAyat"
                android:textColor="#F4A460" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>